fix button alignment

--- a/docdoku-server/docdoku-server-web/yo/app/less/product-structure/app.less
+++ b/docdoku-server/docdoku-server-web/yo/app/less/product-structure/app.less
@@ -52,8 +52,14 @@
         display: inline;
     }
 
-    .cascade-checkout-group .btn-group span.caret {
+
+
+    .cascade-checkout-group .btn-group {
+        span.caret {
             height: 15px;
+        }
+
+        display: inline;
     }
 
 }
